Fix product banner styles on mobile

--- a/wp-content/themes/pcf/css/style.css
+++ b/wp-content/themes/pcf/css/style.css
@@ -3458,6 +3458,11 @@ button.alm-load-more-btn:focus {
 		padding: 0 30px;
 	}
 
+	.kitchen-details-banner img {
+		max-width: 100%;
+		height: auto;
+	}
+
 }
 
 @media only screen and (max-width : 768px) {
